--- a/training.ipynb
+++ b/training.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prepareData import *\n",
-    "from createModel import *\n",
+    "from tools.prepareData import *\n",
+    "from tools.createModel import *\n",
     "\n",
     "TRAIN_PATH = r'E:\\Datasets\\ISIC_2020\\train'\n",
     "print(f\"Número de imagens JPG na pasta TRAIN_PATH: {len([file for file in os.listdir(TRAIN_PATH) if file.endswith('.jpg')])}\")\n",
