--- a/training.ipynb
+++ b/training.ipynb
@@ -13,8 +13,8 @@
     "print(f\"Número de imagens JPG na pasta TRAIN_PATH: {len([file for file in os.listdir(TRAIN_PATH) if file.endswith('.jpg')])}\")\n",
     "\n",
     "\n",
-    "df = pd.read_csv('train.csv')\n",
-    "df_dup = pd.read_csv('train_dup.csv')\n",
+    "df = pd.read_csv(r'data\\train.csv')\n",
+    "df_dup = pd.read_csv(r'data\\train_dup.csv')\n",
     "\n",
     "df = removeDuplicates(df,df_dup)\n",
     "dfs = splitDataset(df)\n",
